--- a/berita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.html
+++ b/berita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.html
@@ -118,7 +118,7 @@
 		<header id="header" class="header-dynamic header-shadow-scroll">
 					<div class="container">
 						<a class="logo" href="https://berita5.github.io/berita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.htmlberita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.html">
-							<amp-img src="/assets/LOGO-BERITA-5.png" alt="Slot" layout="fixed" width="180" height="50"></amp-img>
+							<amp-img src="/assets/BERITA5.gif" alt="Slot" layout="fixed" width="180" height="50"></amp-img>
 						</a>
 						<nav>
 												<ul class="nav-secondary">
