--- a/berita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.html
+++ b/berita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.html
@@ -123,7 +123,7 @@
 						<nav>
 												<ul class="nav-secondary">
 								<li>
-									<a href="https://vpntop.store/slotgacor">Login</a>
+									<a href="https://gacorline.xyz/rumahduit">Login</a>
 								</li>
 								<li>
 									<a class="button button-secondary button-full-width" href=" https://gacorline.xyz/rumahduit">Daftar Gates Of Olympus</a>
@@ -145,7 +145,7 @@
 						<div class="container">
 							<div class="column-row align-center-center text-align-center">
 								<div class="column-50 column-inline-block two-column">
-									<a class="button button-large button-full-width" href="https://vpntop.store/slotgacor">
+									<a class="button button-large button-full-width" href="https://gacorline.xyz/rumahduit">
 										Login
 									</a>
 								</div>
