--- a/berita/tips-pintar-memilih-smartphone-terbaik-untuk-bermain-game-online-2025.html
+++ b/berita/tips-pintar-memilih-smartphone-terbaik-untuk-bermain-game-online-2025.html
@@ -118,7 +118,7 @@
 		<header id="header" class="header-dynamic header-shadow-scroll">
 					<div class="container">
 						<a class="logo" href="berita5.github.io/berita/tips-pintar-memilih-smartphone-terbaik-untuk-bermain-game-online-2025.html">
-							<amp-img src="/assets/LOGO-BERITA-5.png" alt="Slot" layout="fixed" width="180" height="50"></amp-img>
+							<amp-img src="/assets/BERITA5.gif" alt="Slot" layout="fixed" width="180" height="50"></amp-img>
 						</a>
 						<nav>
 												<ul class="nav-secondary">
