--- a/berita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.html
+++ b/berita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.html
@@ -9,10 +9,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 		<title>Rekomendasi HP Terbaik untuk Bermain Game Gates of Olympus</title>
-		<link rel="canonical" href="https://berita5.github.io/berita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.htmlberita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.html" />
+		<link rel="canonical" href="https://berita5.github.io/berita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.html" />
 		<link rel="shortcut icon" href="/assets/LOGO-BERITA-5.png" />
 		<link rel="icon" href="/assets/LOGO-BERITA-5.png" type="image/png" sizes="16x16" />
-		<link href="https://berita5.github.io/berita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.htmlberita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.html" rel="dns-prefetch" />	
+		<link href="https://berita5.github.io/berita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.html" rel="dns-prefetch" />	
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<meta name="description" content="Temukan rekomendasi HP gaming terbaik untuk memainkan Gates of Olympus dengan lancar dan tanpa lag. Dari ASUS ROG Phone 7 hingga iPhone 14 Pro Max, artikel ini membahas spesifikasi unggulan, performa, dan fitur-fitur penting yang membuat pengalaman bermain semakin seru dan imersif." />
@@ -33,14 +33,14 @@
 		<meta property="og:locale:alternate" content="en_US" />
 		<meta property="og:title" content="Rekomendasi HP Terbaik untuk Bermain Game Gates of Olympus" />
 		<meta property="og:description" content="Temukan rekomendasi HP gaming terbaik untuk memainkan Gates of Olympus dengan lancar dan tanpa lag. Dari ASUS ROG Phone 7 hingga iPhone 14 Pro Max, artikel ini membahas spesifikasi unggulan, performa, dan fitur-fitur penting yang membuat pengalaman bermain semakin seru dan imersif." />
-		<meta property="og:url" content="https://berita5.github.io/berita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.htmlberita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.html">
+		<meta property="og:url" content="https://berita5.github.io/berita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.html">
 		<meta property="og:site_name" content="Slot" />
 		<meta property="og:image" content="/assets/banner-berita5.gif" />
 		<meta property="og:image:alt" content="Slot" />
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:site" content="@Slot" />
 		<meta name="twitter:creator" content="@SlotGacorHariIni" />
-		<meta name="twitter:domain" content="https://berita5.github.io/berita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.htmlberita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.html" />
+		<meta name="twitter:domain" content="https://berita5.github.io/berita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.html" />
 		<meta name="twitter:title" content="Rekomendasi HP Terbaik untuk Bermain Game Gates of Olympus" />
 		<meta name="twitter:description" content="Temukan rekomendasi HP gaming terbaik untuk memainkan Gates of Olympus dengan lancar dan tanpa lag. Dari ASUS ROG Phone 7 hingga iPhone 14 Pro Max, artikel ini membahas spesifikasi unggulan, performa, dan fitur-fitur penting yang membuat pengalaman bermain semakin seru dan imersif." />
 		<meta name="twitter:image" content="/assets/banner-berita5.gif" />
@@ -64,7 +64,7 @@
 					"@type": "Organization",
 					"name": "gates of olympus",
 					"alternateName": "Rekomendasi HP Terbaik untuk Bermain Game Gates of Olympus",
-					"url": "https://berita5.github.io/berita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.htmlberita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.html",
+					"url": "https://berita5.github.io/berita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.html",
 					"logo": "/assets/BERITA5.gif"
 				  }
 				</script>
@@ -76,12 +76,12 @@
 					  "@type": "ListItem",
 					  "position": 1,
 					  "name": "Home",
-					  "item": "https://berita5.github.io/berita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.htmlberita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.html"
+					  "item": "https://berita5.github.io/berita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.html"
 					}, {
 					  "@type": "ListItem",
 					  "position": 2,
 					  "name": "gates of olympus",
-					  "item": "https://berita5.github.io/berita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.htmlberita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.html"
+					  "item": "https://berita5.github.io/berita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.html"
 					}]
 				  }
 				</script>
@@ -91,7 +91,7 @@
 					"@type": "NewsArticle",
 					"mainEntityOfPage": {
 					  "@type": "WebPage",
-					  "@id": "https://berita5.github.io/berita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.htmlberita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.html"
+					  "@id": "https://berita5.github.io/berita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.html"
 					},
 					"headline": "Rekomendasi HP Terbaik untuk Bermain Game Gates of Olympus",
 					"description": "Temukan rekomendasi HP gaming terbaik untuk memainkan Gates of Olympus dengan lancar dan tanpa lag. Dari ASUS ROG Phone 7 hingga iPhone 14 Pro Max, artikel ini membahas spesifikasi unggulan, performa, dan fitur-fitur penting yang membuat pengalaman bermain semakin seru dan imersif.",
@@ -99,7 +99,7 @@
 					"author": {
 					  "@type": "Organization",
 					  "name": "gates of olympus",
-					  "url": "https://berita5.github.io/berita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.htmlberita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.html"
+					  "url": "https://berita5.github.io/berita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.html"
 					},
 					"publisher": {
 					  "@type": "Organization",
@@ -117,7 +117,7 @@
 		<body>
 		<header id="header" class="header-dynamic header-shadow-scroll">
 					<div class="container">
-						<a class="logo" href="https://berita5.github.io/berita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.htmlberita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.html">
+						<a class="logo" href="https://berita5.github.io/berita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.html">
 							<amp-img src="/assets/BERITA5.gif" alt="Slot" layout="fixed" width="180" height="50"></amp-img>
 						</a>
 						<nav>
