--- a/berita/terobosan-terbaru-tv-smart-terbaik-yang-cocok-untuk-bermain-game-online-pragmatic-play-2025.html
+++ b/berita/terobosan-terbaru-tv-smart-terbaik-yang-cocok-untuk-bermain-game-online-pragmatic-play-2025.html
@@ -169,10 +169,8 @@
           <h1 style="text-align: center;">
             <strong>Terobosan Terbaru TV Smart Terbaik yang Sangat Cocok untuk Bermain Game Online Pragmatic Play 2025</strong>
           </h1>
-          <p>
-    <img style="display: block; margin-left: auto; margin-right: auto;" 
-         src="tv-smart-pragmatic-play.png" 
-         alt="Pragmatic Play" />
+         <p class="center-image">
+    <img src="tv-smart-pragmatic-play.png" alt="Pragmatic Play" />
 </p>
           <p>&nbsp;</p>
           <p>Di era digital yang semakin maju, pengalaman bermain game online kini semakin imersif berkat hadirnya berbagai inovasi teknologi. Salah satu aspek yang paling berpengaruh adalah penggunaan TV Smart terbaru yang dirancang khusus untuk memberikan pengalaman bermain game terbaik. Tahun 2025 menjadi tahun revolusioner bagi para pecinta game online, khususnya bagi pemain Pragmatic Play, dengan hadirnya TV Smart terbaik yang menawarkan teknologi canggih, latensi rendah, dan visual yang memukau.</p>
