--- a/berita/tips-pintar-memilih-smartphone-terbaik-untuk-bermain-game-online-2025.html
+++ b/berita/tips-pintar-memilih-smartphone-terbaik-untuk-bermain-game-online-2025.html
@@ -183,7 +183,13 @@
 			</table>
 					<h1 style="text-align: center;"><strong>Tips Pintar Memilih Smartphone Terbaik untuk Bermain Game Online 2025</strong></h1>
 						<p>&nbsp;</p>
-						<p>Di era digital saat ini, bermain game online di smartphone semakin populer. Dengan berbagai pilihan smartphone yang tersedia, penting untuk memilih perangkat yang mampu memberikan performa terbaik agar pengalaman bermain tetap lancar dan nyaman. Berikut adalah beberapa tips pintar dalam memilih smartphone terbaik untuk menikmati keseruan bermain game online pg soft di tahun 2025.</p>
+						<p>
+    <img style="display: block; margin-left: auto; margin-right: auto;" 
+         src="/assets/pgsoft.png" 
+         alt="PGsoft" />
+</p>
+
+							<p>Di era digital saat ini, bermain game online di smartphone semakin populer. Dengan berbagai pilihan smartphone yang tersedia, penting untuk memilih perangkat yang mampu memberikan performa terbaik agar pengalaman bermain tetap lancar dan nyaman. Berikut adalah beberapa tips pintar dalam memilih smartphone terbaik untuk menikmati keseruan bermain game online pg soft di tahun 2025.</p>
 						<ol>
 						<li><strong>Pilih Chipset yang Kuat<br /></strong>Chipset adalah otak dari smartphone, dan faktor ini sangat berpengaruh terhadap performa gaming. Beberapa chipset terbaik untuk gaming pada tahun 2025 antara lain:<br />Qualcomm Snapdragon 8 Gen 3<br />MediaTek Dimensity 9300<br />Apple A18 Bionic<br />Chipset yang lebih kuat akan memberikan kecepatan pemrosesan lebih tinggi, grafis lebih tajam, dan efisiensi daya lebih baik.<br /><br /></li>
 						<li><strong>Perhatikan Kapasitas RAM dan Memori Internal<br /></strong>Game pg soft modern memerlukan kapasitas RAM dan memori yang besar agar tidak lag saat dimainkan. Pilih smartphone dengan:<br /><br />Minimal 8GB RAM untuk game ringan hingga sedang<br />Minimal 12GB atau 16GB RAM untuk game berat<br />Penyimpanan internal minimal 256GB agar cukup untuk menyimpan game dan data lain<br /><br /></li>
