--- a/berita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.html
+++ b/berita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.html
@@ -46,6 +46,9 @@
 		<meta name="twitter:image" content="/assets/banner-berita5.gif" />
 		<link rel="preload" as="script" href="https://cdn.ampproject.org/v0.js">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
+		 <link rel="alternate" hreflang="id-ID" href="https://berita5.github.io/berita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.html" />
+   		 <link rel="alternate" hreflang="id" href="https://berita5.github.io/berita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.html" />
+   		 <link rel="alternate" hreflang="x-default" href="https://berita5.github.io/berita/Rekomendasi-HP-Terbaik-untuk-Bermain-Game-Gates-of-Olympus.html" />
 		<meta name="google-site-verification" content="Q35j2gtIvlJsDGPGAVaQ1Xxd-5H_EfRGoJwBkoKKPYQ" />
 		 <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
 		  
