--- a/berita/terobosan-terbaru-tv-smart-terbaik-yang-cocok-untuk-bermain-game-online-pragmatic-play-2025.html
+++ b/berita/terobosan-terbaru-tv-smart-terbaik-yang-cocok-untuk-bermain-game-online-pragmatic-play-2025.html
@@ -11,6 +11,9 @@
     <link rel="shortcut icon" href="/assets/LOGO-BERITA-5.png" />
     <link rel="icon" href="/assets/LOGO-BERITA-5.png" type="image/png" sizes="16x16" />
     <link href="https://berita5.github.io/berita/terobosan-terbaru-tv-smart-terbaik-yang-sangat-cocok-untuk-bermain-game-online-pragmatic-play-2025.html" rel="dns-prefetch" />
+     <link rel="alternate" hreflang="id-ID" href="https://berita5.github.io/berita/terobosan-terbaru-tv-smart-terbaik-yang-sangat-cocok-untuk-bermain-game-online-pragmatic-play-2025.html" />
+    <link rel="alternate" hreflang="id" href="https://berita5.github.io/berita/terobosan-terbaru-tv-smart-terbaik-yang-sangat-cocok-untuk-bermain-game-online-pragmatic-play-2025.html" />
+    <link rel="alternate" hreflang="x-default" href="https://berita5.github.io/berita/terobosan-terbaru-tv-smart-terbaik-yang-sangat-cocok-untuk-bermain-game-online-pragmatic-play-2025.html" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta name="description" content="Berita5 merupakan media berita terupdate yang membahas seputar info dan tips terbaik dalam memilik tv smart terbaru dan terbaik untuk bermain game online pragmatic play di 2025" />
