--- a/berita/tips-pintar-memilih-smartphone-terbaik-untuk-bermain-game-online-2025.html
+++ b/berita/tips-pintar-memilih-smartphone-terbaik-untuk-bermain-game-online-2025.html
@@ -9,10 +9,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 		<title>Tips Pintar Memilih Smartphone Terbaik untuk Bermain Game Online 2025</title>
-		<link rel="canonical" href="berita5.github.io/berita/tips-pintar-memilih-smartphone-terbaik-untuk-bermain-game-online-2025.html" />
+		<link rel="canonical" href="https://berita5.github.io/berita/tips-pintar-memilih-smartphone-terbaik-untuk-bermain-game-online-2025.html" />
 		<link rel="shortcut icon" href="/assets/LOGO-BERITA-5.png" />
 		<link rel="icon" href="/assets/LOGO-BERITA-5.png" type="image/png" sizes="16x16" />
-		<link href="berita5.github.io/berita/tips-pintar-memilih-smartphone-terbaik-untuk-bermain-game-online-2025.html" rel="dns-prefetch" />	
+		<link href="https://berita5.github.io/berita/tips-pintar-memilih-smartphone-terbaik-untuk-bermain-game-online-2025.html" rel="dns-prefetch" />	
+	 	<link rel="alternate" hreflang="id-ID" href="https://berita5.github.io/berita/tips-pintar-memilih-smartphone-terbaik-untuk-bermain-game-online-2025.html" />
+   		 <link rel="alternate" hreflang="id" href="https://berita5.github.io/berita/tips-pintar-memilih-smartphone-terbaik-untuk-bermain-game-online-2025.html" />
+   		 <link rel="alternate" hreflang="x-default" href="https://berita5.github.io/berita/tips-pintar-memilih-smartphone-terbaik-untuk-bermain-game-online-2025.html" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<meta name="description" content="Berita5 merupakan media berita terupdate yang membahas seputar info dan tips terbaik dalam memilik smartphon terbaik untuk bermain game pg soft di 2025" />
@@ -33,14 +36,14 @@
 		<meta property="og:locale:alternate" content="en_US" />
 		<meta property="og:title" content="Tips Pintar Memilih Smartphone Terbaik untuk Bermain Game Online 2025" />
 		<meta property="og:description" content="Berita5 merupakan media berita terupdate yang membahas seputar info dan tips terbaik dalam memilik smartphon terbaik untuk bermain game pg soft di 2025" />
-		<meta property="og:url" content="berita5.github.io/berita/tips-pintar-memilih-smartphone-terbaik-untuk-bermain-game-online-2025.html">
+		<meta property="og:url" content="https://berita5.github.io/berita/tips-pintar-memilih-smartphone-terbaik-untuk-bermain-game-online-2025.html">
 		<meta property="og:site_name" content="Slot" />
 		<meta property="og:image" content="/assets/banner-berita5.gif" />
 		<meta property="og:image:alt" content="Slot" />
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:site" content="@Slot" />
 		<meta name="twitter:creator" content="@SlotGacorHariIni" />
-		<meta name="twitter:domain" content="berita5.github.io/berita/tips-pintar-memilih-smartphone-terbaik-untuk-bermain-game-online-2025.html" />
+		<meta name="twitter:domain" content="https://berita5.github.io/berita/tips-pintar-memilih-smartphone-terbaik-untuk-bermain-game-online-2025.html" />
 		<meta name="twitter:title" content="Tips Pintar Memilih Smartphone Terbaik untuk Bermain Game Online 2025" />
 		<meta name="twitter:description" content="Berita5 merupakan media berita terupdate yang membahas seputar info dan tips terbaik dalam memilik smartphon terbaik untuk bermain game pg soft di 2025" />
 		<meta name="twitter:image" content="/assets/banner-berita5.gif" />
@@ -64,7 +67,7 @@
 					"@type": "Organization",
 					"name": "PG soft",
 					"alternateName": "Tips Pintar Memilih Smartphone Terbaik untuk Bermain Game Online 2025",
-					"url": "berita5.github.io/berita/tips-pintar-memilih-smartphone-terbaik-untuk-bermain-game-online-2025.html",
+					"url": "https://berita5.github.io/berita/tips-pintar-memilih-smartphone-terbaik-untuk-bermain-game-online-2025.html",
 					"logo": "/assets/BERITA5.gif"
 				  }
 				</script>
@@ -76,12 +79,12 @@
 					  "@type": "ListItem",
 					  "position": 1,
 					  "name": "Home",
-					  "item": "berita5.github.io/berita/tips-pintar-memilih-smartphone-terbaik-untuk-bermain-game-online-2025.html"
+					  "item": "https://berita5.github.io/berita/tips-pintar-memilih-smartphone-terbaik-untuk-bermain-game-online-2025.html"
 					}, {
 					  "@type": "ListItem",
 					  "position": 2,
 					  "name": "PG soft",
-					  "item": "berita5.github.io/berita/tips-pintar-memilih-smartphone-terbaik-untuk-bermain-game-online-2025.html"
+					  "item": "https://berita5.github.io/berita/tips-pintar-memilih-smartphone-terbaik-untuk-bermain-game-online-2025.html"
 					}]
 				  }
 				</script>
@@ -91,7 +94,7 @@
 					"@type": "NewsArticle",
 					"mainEntityOfPage": {
 					  "@type": "WebPage",
-					  "@id": "berita5.github.io/berita/tips-pintar-memilih-smartphone-terbaik-untuk-bermain-game-online-2025.html"
+					  "@id": "https://berita5.github.io/berita/tips-pintar-memilih-smartphone-terbaik-untuk-bermain-game-online-2025.html"
 					},
 					"headline": "Tips Pintar Memilih Smartphone Terbaik untuk Bermain Game Online 2025",
 					"description": "Berita5 merupakan media berita terupdate yang membahas seputar info dan tips terbaik dalam memilik smartphon terbaik untuk bermain game pg soft di 2025",
@@ -99,7 +102,7 @@
 					"author": {
 					  "@type": "Organization",
 					  "name": "PG soft",
-					  "url": "berita5.github.io/berita/tips-pintar-memilih-smartphone-terbaik-untuk-bermain-game-online-2025.html"
+					  "url": "https://berita5.github.io/berita/tips-pintar-memilih-smartphone-terbaik-untuk-bermain-game-online-2025.html"
 					},
 					"publisher": {
 					  "@type": "Organization",
@@ -117,7 +120,7 @@
 		<body>
 		<header id="header" class="header-dynamic header-shadow-scroll">
 					<div class="container">
-						<a class="logo" href="berita5.github.io/berita/tips-pintar-memilih-smartphone-terbaik-untuk-bermain-game-online-2025.html">
+						<a class="logo" href="https://berita5.github.io/berita/tips-pintar-memilih-smartphone-terbaik-untuk-bermain-game-online-2025.html">
 							<amp-img src="/assets/BERITA5.gif" alt="Slot" layout="fixed" width="180" height="50"></amp-img>
 						</a>
 						<nav>
