--- a/berita/tips-pintar-memilih-smartphone-terbaik-untuk-bermain-game-online-2025.html
+++ b/berita/tips-pintar-memilih-smartphone-terbaik-untuk-bermain-game-online-2025.html
@@ -188,7 +188,7 @@
 						<p>&nbsp;</p>
 						<p>
     <img style="display: block; margin-left: auto; margin-right: auto;" 
-         src="/assets/pgsoft.png" 
+         src="/assets/slot-pgsoft.png" 
          alt="PGsoft" />
 </p>
 
