--- a/berita/fitur-unggulan-hp-android-asus-rog-phone-7-ultimate-menyuguhkan-kemudahan-bermain-game-princces-starlight.html
+++ b/berita/fitur-unggulan-hp-android-asus-rog-phone-7-ultimate-menyuguhkan-kemudahan-bermain-game-princces-starlight.html
@@ -1,5 +1,5 @@
 
-<!-- PUCUK PUCUK PUCUK PUCUK -->
+<!-- bee bee bee bee -->
 <!DOCTYPE html>
     <html ⚡ lang="id" itemscope="itemscope" itemtype="https://schema.org/WebPage">
       <head>
