--- a/berita/fitur-unggulan-hp-android-asus-rog-phone-7-ultimate-menyuguhkan-kemudahan-bermain-game-starlight-princess.html
+++ b/berita/fitur-unggulan-hp-android-asus-rog-phone-7-ultimate-menyuguhkan-kemudahan-bermain-game-starlight-princess.html
@@ -271,33 +271,52 @@
           <article class='bg-container contain'>
             <div class='article'>
               <h1 style="text-align: center;"><strong>Fitur Unggulan HP Android ASUS ROG Phone 7 Ultimate Menyuguhkan Kemudahan Bermain Game Starlight Princess</strong></h1>
-			<div class="">
-					<amp-img src="https://berita5.github.io/assets/hp-asus-rog-phone-7-ultimate.png" width="1280" height="720" layout="intrinsic" alt="Starlight Princess"></amp-img>
-				</div>
-			<p data-start="111" data-end="707">Dalam dunia gaming, kenyamanan dan performa perangkat menjadi kunci utama dalam meraih pengalaman bermain yang memuaskan. Salah satu pilihan terbaik untuk gamer yang ingin merasakan performa tinggi adalah HP Android ASUS ROG Phone 7 Ultimate. Dikenal dengan kemampuan teknis yang luar biasa, ASUS ROG Phone 7 Ultimate juga menawarkan berbagai fitur canggih yang sangat mendukung pengalaman bermain game, salah satunya adalah game <em data-start="541" data-end="561">Starlight Princess</em>. Game yang penuh petualangan dan tantangan ini bisa dimainkan dengan lancar berkat spesifikasi dan fitur unggulan dari ASUS ROG Phone 7 Ultimate.</p>
-			<h2><strong data-start="709" data-end="746">Deskripsi Game Starlight Princess</strong></h2>
-			<p data-start="748" data-end="1210"><em data-start="748" data-end="768">Starlight Princess</em> adalah sebuah game petualangan yang menggabungkan elemen fantasi dan strategi. Pemain akan dibawa ke dunia ajaib yang penuh dengan kerajaan, pahlawan, dan monster, di mana mereka harus menyelesaikan berbagai tantangan untuk menyelamatkan dunia dari kehancuran. Selain gameplay yang menarik, <em data-start="1060" data-end="1080">Starlight Princess</em> juga menawarkan visual yang memukau dan alur cerita yang mendalam, membuat setiap sesi permainan menjadi seru dan tak terlupakan.</p>
-			<h3><strong data-start="1212" data-end="1294">Fitur Unggulan ASUS ROG Phone 7 Ultimate untuk Pengalaman Bermain yang Optimal</strong></h3>
-			<ol>
-			<li data-start="1299" data-end="1746"><strong data-start="1299" data-end="1321">Layar AMOLED 165Hz</strong><br data-start="1321" data-end="1324" />Salah satu fitur yang paling menonjol dari ASUS ROG Phone 7 Ultimate adalah layar AMOLED dengan refresh rate hingga 165Hz. Layar ini memberikan tampilan yang sangat jernih dan responsif, sangat cocok untuk game seperti <em data-start="1546" data-end="1566">Starlight Princess</em> yang mengandalkan kecepatan dan presisi. Dengan refresh rate tinggi, animasi dalam game berjalan dengan sangat halus, mengurangi lag dan memberikan kenyamanan mata selama bermain.</li>
-			<li data-start="1751" data-end="2092"><strong data-start="1751" data-end="1782">Prosesor Snapdragon 8 Gen 2</strong><br data-start="1782" data-end="1785" />Dengan prosesor Snapdragon 8 Gen 2, ASUS ROG Phone 7 Ultimate mampu menjalankan game berat tanpa kendala. Prosesor ini memberikan performa yang sangat cepat, sehingga kamu bisa menikmati <em data-start="1975" data-end="1995">Starlight Princess</em> dengan kualitas grafis tinggi dan tanpa adanya penurunan performa selama sesi permainan panjang.</li>
-			<li data-start="2097" data-end="2511"><strong data-start="2097" data-end="2143">Baterai 6000mAh dengan Pengisian Cepat 65W</strong><br data-start="2143" data-end="2146" />Keunggulan lain dari ASUS ROG Phone 7 Ultimate adalah daya tahan baterainya. Dilengkapi dengan baterai berkapasitas 6000mAh, kamu bisa bermain game selama berjam-jam tanpa khawatir kehabisan daya. Ditambah lagi dengan fitur pengisian cepat 65W, kamu tidak perlu menunggu lama untuk mengisi ulang baterai dan melanjutkan petualangan di dunia <em data-start="2490" data-end="2510">Starlight Princess</em>.</li>
-			<li data-start="2516" data-end="2842"><strong data-start="2516" data-end="2549">Sistem Pendinginan GameCool 7</strong><br data-start="2549" data-end="2552" />Untuk menjaga suhu perangkat tetap stabil selama penggunaan yang intens, ASUS ROG Phone 7 Ultimate dilengkapi dengan sistem pendinginan GameCool 7. Sistem ini membantu mengurangi panas yang dihasilkan selama bermain game, sehingga performa tetap maksimal dan perangkat tidak cepat panas.</li>
-			</ol>
-			<h3><strong data-start="2844" data-end="2917">Tips Bermain Game Starlight Princess dengan ASUS ROG Phone 7 Ultimate</strong></h3>
-			<ol>
-			<li data-start="2922" data-end="3198"><strong data-start="2922" data-end="2953">Manfaatkan Fitur Game Genie</strong><br data-start="2953" data-end="2956" />ASUS ROG Phone 7 Ultimate dilengkapi dengan fitur Game Genie yang memungkinkan kamu untuk menyesuaikan pengaturan game sesuai kebutuhan. Kamu bisa mematikan notifikasi atau mengatur performa sistem agar lebih fokus pada pengalaman bermain.</li>
-			<li data-start="3203" data-end="3461"><strong data-start="3203" data-end="3226">Gunakan Mode X-Mode</strong><br data-start="3226" data-end="3229" />Aktifkan mode X-Mode untuk mendapatkan performa maksimal saat bermain <em data-start="3302" data-end="3322">Starlight Princess</em>. Mode ini akan mengoptimalkan kinerja prosesor dan GPU sehingga kamu bisa mendapatkan grafis dan kecepatan yang lebih baik selama bermain.</li>
-			<li data-start="3466" data-end="3778"><strong data-start="3466" data-end="3506">Cobalah Pengaturan Grafik yang Tepat</strong><br data-start="3506" data-end="3509" />Untuk kenyamanan bermain, sesuaikan pengaturan grafis dalam game dengan kemampuan perangkatmu. ASUS ROG Phone 7 Ultimate dapat menangani grafis tinggi dengan baik, namun, menyesuaikan pengaturan untuk pengalaman yang lebih lancar bisa memberikan keunggulan tambahan.</li>
-			</ol>
-			<p><strong>FAQ</strong></p>
-			<p data-start="3823" data-end="4128"><strong data-start="3823" data-end="3895">1. Apa saja keunggulan ASUS ROG Phone 7 Ultimate dalam bermain game?</strong><br data-start="3895" data-end="3898" />ASUS ROG Phone 7 Ultimate menawarkan berbagai fitur unggulan seperti layar AMOLED 165Hz, prosesor Snapdragon 8 Gen 2, sistem pendinginan GameCool 7, dan baterai besar 6000mAh yang mendukung permainan jangka panjang tanpa gangguan.</p>
-			<p data-start="4130" data-end="4365"><strong data-start="4130" data-end="4199">2. Apakah ASUS ROG Phone 7 Ultimate cocok untuk semua jenis game?</strong><br data-start="4199" data-end="4202" />Ya, dengan spesifikasi yang sangat tinggi, ASUS ROG Phone 7 Ultimate cocok untuk semua jenis game, baik yang ringan maupun yang berat seperti <em data-start="4344" data-end="4364">Starlight Princess</em>.</p>
-			<p data-start="4367" data-end="4655"><strong data-start="4367" data-end="4449">3. Berapa lama daya tahan baterai ASUS ROG Phone 7 Ultimate saat bermain game?</strong><br data-start="4449" data-end="4452" />Dengan baterai 6000mAh, ASUS ROG Phone 7 Ultimate mampu bertahan hingga beberapa jam dalam permainan intensif. Namun, daya tahan bisa bervariasi tergantung pengaturan grafis dan penggunaan fitur lainnya.</p>
-			<p data-start="4657" data-end="4942"><strong data-start="4657" data-end="4756">4. Apakah game </strong><em data-start="4674" data-end="4694"><strong>Starlight Princess</strong></em><strong> dapat dimainkan dengan lancar di ASUS ROG Phone 7 Ultimate?</strong><br data-start="4756" data-end="4759" />Tentu saja! Dengan prosesor Snapdragon 8 Gen 2 dan layar AMOLED 165Hz, <em data-start="4830" data-end="4850">Starlight Princess</em> dapat dijalankan dengan sangat lancar dan grafis yang memukau di ASUS ROG Phone 7 Ultimate.</p>
-			<p><strong data-start="4944" data-end="4958">Kesimpulan</strong></p>
-			<p data-start="4960" data-end="5486" data-is-last-node="">ASUS ROG Phone 7 Ultimate adalah pilihan tepat bagi para gamer yang ingin merasakan pengalaman bermain game yang luar biasa, terutama untuk game <em data-start="5105" data-end="5125">Starlight Princess</em>. Dengan kombinasi layar yang tajam, prosesor cepat, baterai tahan lama, dan sistem pendinginan yang efisien, ASUS ROG Phone 7 Ultimate memberikan segala yang dibutuhkan untuk menikmati permainan tanpa hambatan. Jadi, tunggu apa lagi? Segera coba dan nikmati petualangan seru di dunia <em data-start="5410" data-end="5430">Starlight Princess</em> dengan perangkat yang siap memberikan performa terbaik!</p>
-
+					<div class="">
+					<amp-img src="https://berita5.github.io/hp-asus-rog-phone-7-ultimate.png" width="1280" height="720" layout="intrinsic" alt="Starlight Princess"></amp-img>
+				</div><p>&nbsp;</p>
+					<p>Dalam dunia gaming, kenyamanan dan performa perangkat menjadi kunci utama dalam meraih pengalaman bermain yang memuaskan. Salah satu pilihan terbaik untuk gamer yang ingin merasakan performa tinggi adalah HP Android ASUS ROG Phone 7 Ultimate. Dikenal dengan kemampuan teknis yang luar biasa, ASUS ROG Phone 7 Ultimate juga menawarkan berbagai fitur canggih yang sangat mendukung pengalaman bermain game, salah satunya adalah game Starlight Princess. Game yang penuh petualangan dan tantangan ini bisa dimainkan dengan lancar berkat spesifikasi dan fitur unggulan dari ASUS ROG Phone 7 Ultimate.</p>
+					<p>&nbsp;</p>
+					<h2><strong>Deskripsi Game Starlight Princess</strong></h2>
+					<p>Starlight Princess adalah sebuah game petualangan yang menggabungkan elemen fantasi dan strategi. Pemain akan dibawa ke dunia ajaib yang penuh dengan kerajaan, pahlawan, dan monster, di mana mereka harus menyelesaikan berbagai tantangan untuk menyelamatkan dunia dari kehancuran. Selain gameplay yang menarik, Starlight Princess juga menawarkan visual yang memukau dan alur cerita yang mendalam, membuat setiap sesi permainan menjadi seru dan tak terlupakan.</p>
+					<p>&nbsp;</p>
+					<h2><strong>Fitur Unggulan ASUS ROG Phone 7 Ultimate untuk Pengalaman Bermain yang Optimal</strong></h2>
+					<p><strong>Layar AMOLED 165Hz</strong></p>
+					<p>Salah satu fitur yang paling menonjol dari ASUS ROG Phone 7 Ultimate adalah layar AMOLED dengan refresh rate hingga 165Hz. Layar ini memberikan tampilan yang sangat jernih dan responsif, sangat cocok untuk game seperti Starlight Princess yang mengandalkan kecepatan dan presisi. Dengan refresh rate tinggi, animasi dalam game berjalan dengan sangat halus, mengurangi lag dan memberikan kenyamanan mata selama bermain.</p>
+					<p><strong>Prosesor Snapdragon 8 Gen 2</strong></p>
+					<p>Dengan prosesor Snapdragon 8 Gen 2, ASUS ROG Phone 7 Ultimate mampu menjalankan game berat tanpa kendala. Prosesor ini memberikan performa yang sangat cepat, sehingga kamu bisa menikmati Starlight Princess dengan kualitas grafis tinggi dan tanpa adanya penurunan performa selama sesi permainan panjang.</p>
+					<p><strong>Baterai 6000mAh dengan Pengisian Cepat 65W</strong></p>
+					<p>Keunggulan lain dari ASUS ROG Phone 7 Ultimate adalah daya tahan baterainya. Dilengkapi dengan baterai berkapasitas 6000mAh, kamu bisa bermain game selama berjam-jam tanpa khawatir kehabisan daya. Ditambah lagi dengan fitur pengisian cepat 65W, kamu tidak perlu menunggu lama untuk mengisi ulang baterai dan melanjutkan petualangan di dunia Starlight Princess.</p>
+					<p><strong>Sistem Pendinginan GameCool 7</strong></p>
+					<p>Untuk menjaga suhu perangkat tetap stabil selama penggunaan yang intens, ASUS ROG Phone 7 Ultimate dilengkapi dengan sistem pendinginan GameCool 7. Sistem ini membantu mengurangi panas yang dihasilkan selama bermain game, sehingga performa tetap maksimal dan perangkat tidak cepat panas.</p>
+					<p>&nbsp;</p>
+					<h2><strong>Tips Bermain Game Starlight Princess dengan ASUS ROG Phone 7 Ultimate</strong></h2>
+					<p><strong>Manfaatkan Fitur Game Genie</strong></p>
+					<p>ASUS ROG Phone 7 Ultimate dilengkapi dengan fitur Game Genie yang memungkinkan kamu untuk menyesuaikan pengaturan game sesuai kebutuhan. Kamu bisa mematikan notifikasi atau mengatur performa sistem agar lebih fokus pada pengalaman bermain.</p>
+					<p><strong>Gunakan Mode X-Mode</strong></p>
+					<p>Aktifkan mode X-Mode untuk mendapatkan performa maksimal saat bermain Starlight Princess. Mode ini akan mengoptimalkan kinerja prosesor dan GPU sehingga kamu bisa mendapatkan grafis dan kecepatan yang lebih baik selama bermain.</p>
+					<p><strong>Cobalah Pengaturan Grafik yang Tepat</strong></p>
+					<p>Untuk kenyamanan bermain, sesuaikan pengaturan grafis dalam game dengan kemampuan perangkatmu. ASUS ROG Phone 7 Ultimate dapat menangani grafis tinggi dengan baik, namun, menyesuaikan pengaturan untuk pengalaman yang lebih lancar bisa memberikan keunggulan tambahan.</p>
+					<p>&nbsp;</p>
+					<h2><strong>FAQ</strong></h2>
+					<ol>
+					<li><strong>Apa saja keunggulan ASUS ROG Phone 7 Ultimate dalam bermain game?<br /></strong>ASUS ROG Phone 7 Ultimate menawarkan berbagai fitur unggulan seperti layar AMOLED 165Hz, prosesor Snapdragon 8 Gen 2, sistem pendinginan GameCool 7, dan baterai besar 6000mAh yang mendukung permainan jangka panjang tanpa gangguan.</li>
+					</ol>
+					<p>&nbsp;</p>
+					<ol>
+					<li><strong>Apakah ASUS ROG Phone 7 Ultimate cocok untuk semua jenis game?<br /></strong>Ya, dengan spesifikasi yang sangat tinggi, ASUS ROG Phone 7 Ultimate cocok untuk semua jenis game, baik yang ringan maupun yang berat seperti Starlight Princess.</li>
+					</ol>
+					<p>&nbsp;</p>
+					<ol>
+					<li><strong>Berapa lama daya tahan baterai ASUS ROG Phone 7 Ultimate saat bermain game?<br /></strong>Dengan baterai 6000mAh, ASUS ROG Phone 7 Ultimate mampu bertahan hingga beberapa jam dalam permainan intensif. Namun, daya tahan bisa bervariasi tergantung pengaturan grafis dan penggunaan fitur lainnya.</li>
+					</ol>
+					<p>&nbsp;</p>
+					<ol>
+					<li><strong>Apakah game Starlight Princess dapat dimainkan dengan lancar di ASUS ROG Phone 7 Ultimate?<br /></strong>Tentu saja! Dengan prosesor Snapdragon 8 Gen 2 dan layar AMOLED 165Hz, Starlight Princess dapat dijalankan dengan sangat lancar dan grafis yang memukau di ASUS ROG Phone 7 Ultimate.</li>
+					</ol>
+					<p>&nbsp;</p>
+					<h2><strong>Kesimpulan</strong></h2>
+					<p>ASUS ROG Phone 7 Ultimate adalah pilihan tepat bagi para gamer yang ingin merasakan pengalaman bermain game yang luar biasa, terutama untuk game Starlight Princess. Dengan kombinasi layar yang tajam, prosesor cepat, baterai tahan lama, dan sistem pendinginan yang efisien, ASUS ROG Phone 7 Ultimate memberikan segala yang dibutuhkan untuk menikmati permainan tanpa hambatan. Jadi, tunggu apa lagi? Segera coba dan nikmati petualangan seru di dunia Starlight Princess dengan perangkat yang siap memberikan performa terbaik!</p>
+					<p>&nbsp;</p>
               </article>
         </section>
     
